--- a/exTra/res/layout/expenses_list_row.xml
+++ b/exTra/res/layout/expenses_list_row.xml
@@ -19,7 +19,7 @@
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"
          		android:text="bolletta"/>
-     
+     		<!-- 
      		<TextView android:id="@+id/row_separator"
          		android:textSize="12sp"
          		android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
          		android:textSize="12sp"
          		android:layout_width="match_parent"
          		android:layout_height="wrap_content"
-         		android:text="corrente"/>
+         		android:text="corrente"/>  -->
      	</LinearLayout>
      
      	<TextView
