--- a/exTra/res/layout/expenses_list_row.xml
+++ b/exTra/res/layout/expenses_list_row.xml
@@ -17,8 +17,8 @@
      		<TextView android:id="@+id/row_type"
          		android:textSize="12sp"
          		android:layout_width="wrap_content"
-         		android:layout_height="wrap_content"
-         		android:text="bolletta"/>
+         		android:layout_height="wrap_content" />
+     		
      		<!-- 
      		<TextView android:id="@+id/row_separator"
          		android:textSize="12sp"
@@ -37,7 +37,6 @@
      	    android:id="@+id/row_description"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
-     	    android:text="periodo maggio giugno"
      	    android:textSize="8sp"
      	    android:textStyle="italic" />
 
@@ -54,14 +53,12 @@
          	android:paddingRight="5dip"
          	android:paddingLeft="5dip"
          	android:layout_width="wrap_content"
-         	android:layout_height="wrap_content"
-         	android:text="12/12/2012"/>
+         	android:layout_height="wrap_content" />
      
      	<TextView android:id="@+id/row_amount"
          	android:textSize="12sp"
          	android:layout_width="wrap_content"
-         	android:layout_height="wrap_content"
-         	android:text="127.39€"/>
+         	android:layout_height="wrap_content" />
      	
       </LinearLayout>
  </LinearLayout>
