--- a/exTra/res/layout/main.xml
+++ b/exTra/res/layout/main.xml
@@ -33,6 +33,11 @@
 	    android:drawSelectorOnTop="false" >
 	</ListView>
 	
+	<TextView android:id="@id/android:empty" 
+	    android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:text="@string/empty_list" />
+	
 	<TextView
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
