--- a/exTra/res/layout/main.xml
+++ b/exTra/res/layout/main.xml
@@ -39,9 +39,9 @@
         android:text="@string/empty_list" />
 	
 	<TextView
+	    	android:id="@+id/month_total"
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
-        	android:text="@string/monthly_total"
         	android:layout_gravity="center"
         	android:layout_marginBottom="25dip"
         	android:textSize="24.5sp" />
